unpackaged/objects/sfsiPoll__Poll_Question__c.object
<CustomObject>
    <description>Define the poll question for which you are seeking answers.</description>
    <fields>
        <fullName>sfsiPoll__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Deactivate a poll using this field.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Image__c</fullName>
        <inlineHelpText>Polls with an image get more responses than ones without an image.</inlineHelpText>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Total_Options__c</fullName>
        <label>Total Options</label>
        <summaryForeignKey>sfsiPoll__Poll_Option__c.sfsiPoll__Poll_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Total_Responses__c</fullName>
        <label>Total Responses</label>
        <summaryForeignKey>sfsiPoll__Poll_Response__c.sfsiPoll__Poll_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Poll Question</label>
    <listViews>
        <fullName>sfsiPoll__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Poll Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poll Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sfsiPoll__Max_5_Options_Allowed</fullName>
        <active>true</active>
        <errorConditionFormula>sfsiPoll__Total_Options__c &gt; 5</errorConditionFormula>
        <errorMessage>That is way too many! Re-think your options, it cannot be more than 5.</errorMessage>
    </validationRules>
</CustomObject>